Ajustes para responsividade

--- a/ds1t-b/yasmin/index.html
+++ b/ds1t-b/yasmin/index.html
@@ -97,18 +97,18 @@
             <div class="avaliacoes__divs">
                 <div class="avaliacoesl1">
                     <div class="av">
-                        <p>“Destinos maravilhosos e pessoas também! Todos os guias super educados que me proporcionaram a melhor experiência que eu poderia ter! Com certeza farei mais viagens com a TRVLS!”</p>
-                        <p>Paulo, 2022</p>
+                        <p class="avaliacao">“Destinos maravilhosos e pessoas também! Todos os guias super educados que me proporcionaram a melhor experiência que eu poderia ter! Com certeza farei mais viagens com a TRVLS!”</p>
+                        <p class="autor">Paulo, 2022</p>
                     </div>
                     <div class="av">
-                        <p>“A viagem mais incrível da minha vida! Eu e minha família amamos o lugar, a alimentação e não tivemos nenhuma complicação, todos super atenciosos e preocupados com a satisfação do cliente!”</p>
-                        <p>Michael, 2022</p>
+                        <p class="avaliacao">“A viagem mais incrível da minha vida! Eu e minha família amamos o lugar, a alimentação e não tivemos nenhuma complicação, todos super atenciosos e preocupados com a satisfação do cliente!”</p>
+                        <p class="autor">Michael, 2022</p>
                     </div>        
             </div>
             <div class="avaliacoesl2">
                 <div class="av">
-                    <p>“Amei a experiência! Tive a oportunidade de passar minhas férias no Rio com minha família e a TRVLS superou as nossas expectativas! Todos os passeios foram repletos de memórias incríveis!”</p>
-                    <p>Luciana, 2022</p>
+                    <p class="avaliacao">“Amei a experiência! Tive a oportunidade de passar minhas férias no Rio com minha família e a TRVLS superou as nossas expectativas! Todos os passeios foram repletos de memórias incríveis!”</p>
+                    <p class="autor">Luciana, 2022</p>
                 </div>
             </div> 
         </section>
