Menu mobile em desenvolvimento

--- a/ds1t-b/André Luiz/index.html
+++ b/ds1t-b/André Luiz/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./css/tab.css">
     <link rel="stylesheet" href="./css/smartwatch.css">
     <link rel="stylesheet" href="./css/informacoes.css">
+    <script src="./js/burguer.js" defer></script>
 </head>
 
 <body>
@@ -42,6 +43,9 @@
             </a>
         </div>
         <nav>
+            <a href="" class="menu-burger-container">
+                <i class="menu-burger"></i>
+            </a>
             <ul class="menu">
                 <li>
                     <a href="#" aria-label="Sobre nós">Sobre nós</a>
