--- a/ds1t-b/Projeto FF/index.html
+++ b/ds1t-b/Projeto FF/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="contatos.css">
     <link rel="stylesheet" href="criadores.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="README.md">
     <title>Final Fantasy VII</title>
 </head>
 
