--- a/ds1t-a/Alexssandro/index.html
+++ b/ds1t-a/Alexssandro/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../Alexssandro/css/header.css">
     <link rel="stylesheet" href="../Alexssandro/css/about.css">
     <link rel="stylesheet" href="../Alexssandro/css/cafes-variados.css">
+    <script src="../Alexssandro/script/slide.js" defer></script>
     <script src="https://kit.fontawesome.com/be4450fc4f.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -72,7 +73,7 @@
 
             <div class="slider-cv">
 
-                <div class="slides-cv">
+                <div class="slides-cv" id="slide">
 
                     <div class="slide primeiro">
 
