--- a/ds1t-a/juliaSoares/index.html
+++ b/ds1t-a/juliaSoares/index.html
@@ -58,6 +58,9 @@
 
     <main>
         <section class="home" id="home">
+
+            <img src="./img/img-home.PNG" alt="" class="home-img">
+
             <div class="slider">
                 <div class="slides">
                     <input type="radio" name="radio-btn" id="radio1">
@@ -86,10 +89,9 @@
                     <label for="radio2" class="manual-btn"></label>
                     <label for="radio3" class="manual-btn"></label>
                 </div>
-            </div> 
+            </div>
             <script src="./js/slider.js"></script>
 
-            <!-- <img src="./img/imagem-slider1.png" alt="img-slider" class="img-slider"> -->
         </section>
 
         <section class="historia" id="historia">
@@ -124,17 +126,17 @@
             <div class="container__menu">
                 <div class="container-carrosel">
                     <div class="carrosel">
-                      <div class="carrosel__img"><span>Mocca Coffe</span></div>
-                      <div class="carrosel__img"><span>Strawberry Frappe</span></div>
-                      <div class="carrosel__img"><span>Caramel Cream</span></div>
-                      <div class="carrosel__img"><span>Iced Coffe</span></div>
-                      <div class="carrosel__img"><span>Vanilla Bean</span></div>
-                      <div class="carrosel__img"><span>Cranberry Juice</span></div>
-                      <div class="carrosel__img"><span>Iced Peach Tea</span></div>
-                      <div class="carrosel__img"><span>Blackberry Smoothie</span></div>
-                      <div class="carrosel__img"><span>Matchá Frappe</span></div>
+                        <div class="carrosel__img"><span>Mocca Coffe</span></div>
+                        <div class="carrosel__img"><span>Strawberry Frappe</span></div>
+                        <div class="carrosel__img"><span>Caramel Cream</span></div>
+                        <div class="carrosel__img"><span>Iced Coffe</span></div>
+                        <div class="carrosel__img"><span>Vanilla Bean</span></div>
+                        <div class="carrosel__img"><span>Cranberry Juice</span></div>
+                        <div class="carrosel__img"><span>Iced Peach Tea</span></div>
+                        <div class="carrosel__img"><span>Blackberry Smoothie</span></div>
+                        <div class="carrosel__img"><span>Matchá Frappe</span></div>
                     </div>
-                  </div>
+                </div>
             </div>
         </section>
 
