Mobile iphone em desenvolvimento

--- a/ds1t-b/André Luiz/index.html
+++ b/ds1t-b/André Luiz/index.html
@@ -43,24 +43,24 @@
             </a>
         </div>
         <nav>
-            <a href="#" class="menu-burger-container">
+            <a href="#" class="menu-burger-container" aria-label="container do menu">
                 <i class="menu-burger"></i>
             </a>
             <ul class="menu">
                 <li>
-                    <a href="#" aria-label="Sobre nós">Sobre nós</a>
+                    <a href="#home" aria-label="Sobre nós">Home</a>
                 </li>
                 <li>
-                    <a href="#" aria-label="Mobile">Mobile</a>
+                    <a href="#mobile" aria-label="Mobile">Mobile</a>
                 </li>
                 <li>
-                    <a href="#" aria-label="Tab">Tab</a>
+                    <a href="#tab" aria-label="Tab">Tab</a>
                 </li>
                 <li>
-                    <a href="#" aria-label="Smartwatch">Smartwatch</a>
+                    <a href="#smartwatch" aria-label="Smartwatch">Smartwatch</a>
                 </li>
                 <li>
-                    <a href="#" aria-label="Informacoes">Informações</a>
+                    <a href="#informacoes" aria-label="Informacoes">Informações</a>
                 </li>
             </ul>
         </nav>
@@ -70,7 +70,7 @@
             </a>
         </div>
     </header>
-    <section class="section-home">
+    <section class="section-home" id="home">
         <div class="promotion-text-container">
             <span>Are you ready?</span>
             <span>For revolution?</span>
@@ -79,7 +79,7 @@
             <img src="./img/fold-image.png" alt="Imagem promocional">
         </div>
     </section>
-    <section class="section-mobile">
+    <section class="section-mobile" id="mobile">
         <div class="title-mobile-container">
                 <h1 class="title-mobile">Mobile</h1>
         </div>
@@ -99,7 +99,7 @@
             <a href="#" class="button-promotion-comprar" aria-label="botao comprar Fold">Comprar</a>
         </div>
     </section>
-    <section class="section-tab">
+    <section class="section-tab" id="tab">
         <div class="title-tab-container">
             <h1 class="title-tab">Tab</h1>
         </div>
@@ -118,7 +118,7 @@
             <a href="#" class="button-promotion-comprar" aria-label="botao comprar tab">Comprar</a>
         </div>
     </section>
-    <section class="section-smartwatch">
+    <section class="section-smartwatch" id="smartwatch">
         <div class="smartwatch-title-container">
             <h1 class="smartwatch-title">Smartwatch</h1>
         </div>
@@ -140,7 +140,7 @@
             </p>
         </div>
     </section>
-    <section class="section-informacoes">
+    <section class="section-informacoes" id="informacoes">
         <div class="informacoes-title-container">
             <h1 class="informacoes-title">Informações</h1>
         </div>
